--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
 #Sun Jul 28 16:29:39 CAT 2013
 app.grails.version=2.0.4
-app.name=ProjectStatup
+app.name=StartupFunnel.app
 app.servlet.version=2.5
